--- a/amadeus/locale/pt_BR/LC_MESSAGES/django.po
+++ b/amadeus/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-01-18 15:35-0300\n"
+"POT-Creation-Date: 2017-01-18 15:42-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20,7 +20,7 @@ msgstr ""
 
 #: amadeus/templates/base.html:90
 msgid "Search for subjects and resources"
-msgstr "Pesquisar por assuntos e recursos"
+msgstr "Buscar por assuntos ou recursos"
 
 #: amadeus/templates/base.html:102
 msgid "settings"
