--- a/categories/locale/pt_BR/LC_MESSAGES/django.po
+++ b/categories/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-01-18 15:35-0300\n"
+"POT-Creation-Date: 2017-01-18 15:42-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -143,6 +143,10 @@ msgstr "em"
 #: categories/templates/categories/notifications_timeline.html:15
 msgid "ago"
 msgstr "atras"
+
+#: categories/templates/categories/update.html:8
+msgid "Update: "
+msgstr "Editar: "
 
 #: categories/views.py:103
 msgid "Replicate Category"
