--- a/links/locale/pt_BR/LC_MESSAGES/django.po
+++ b/links/locale/pt_BR/LC_MESSAGES/django.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: links/forms.py:28
 msgid "Website URL"
-msgstr ""
+msgstr "URL do site:"
 
 #: links/forms.py:30
 msgid "It sets a limit date to finish viewing the website link  "
@@ -31,7 +31,7 @@ msgstr ""
 
 #: links/forms.py:36
 msgid "Link name"
-msgstr ""
+msgstr "Nome do Link"
 
 #: links/forms.py:37
 msgid "End View"
@@ -55,7 +55,7 @@ msgstr ""
 
 #: links/forms.py:80
 msgid "There is already a link with this name on this subject"
-msgstr ""
+msgstr "Ja existe um link com este nome neste Assunto"
 
 #: links/models.py:13
 msgid "simpler_description"
@@ -63,7 +63,7 @@ msgstr ""
 
 #: links/models.py:15
 msgid "Link_URL"
-msgstr ""
+msgstr "URL do link"
 
 #: links/models.py:17 links/models.py:19
 msgid "Initial View"
@@ -95,27 +95,27 @@ msgstr ""
 
 #: links/templates/links/_form.html:407
 msgid "Save"
-msgstr ""
+msgstr "Salvar"
 
 #: links/templates/links/create.html:20
 msgid "Create Website Link"
-msgstr ""
+msgstr "Criar Link do Website"
 
 #: links/templates/links/delete.html:9
 msgid "Are you sure you want delete the Website link"
-msgstr ""
+msgstr "Tem certeza que voce deseja remover esse Link para Website"
 
 #: links/templates/links/delete.html:14
 msgid "Close"
-msgstr ""
+msgstr "Fechar"
 
 #: links/templates/links/delete.html:17
 msgid "Delete"
-msgstr ""
+msgstr "Remover"
 
 #: links/templates/links/update.html:20
 msgid "Edit: "
-msgstr ""
+msgstr "Editar: "
 
 #: links/views.py:52 links/views.py:65 links/views.py:224 links/views.py:226
 #: links/views.py:242 links/views.py:244
@@ -131,20 +131,20 @@ msgstr ""
 msgid ""
 "The  Link \"%s\" was added to the Topic \"%s\" of the virtual environment "
 "\"%s\" successfully!"
-msgstr ""
+msgstr "O link \"%s\" foi adicionado com sucesso ao Topico \"%s\"  do ambiente virtual "\"%s\"" "
 
 #: links/views.py:163
 #, python-format
 msgid ""
 "The Website Link \"%s\" was removed successfully from virtual environment "
 "\"%s\"!"
-msgstr ""
+msgstr "O Link do site \"%s\" foi removido com sucesso do ambiente virtual "\"%s\" " "
 
 #: links/views.py:288
 msgid "Update Website Link"
-msgstr ""
+msgstr "Atualizar Link do website"
 
 #: links/views.py:299
 #, python-format
 msgid "The Website Link \"%s\" was updated successfully!"
-msgstr ""
+msgstr "O link do website  \"%s\" foi atualizado com sucesso! "
