added empty answer to be correct displayed

--- a/file_link/locale/pt_BR/LC_MESSAGES/django.po
+++ b/file_link/locale/pt_BR/LC_MESSAGES/django.po
@@ -116,8 +116,7 @@ msgstr "Visualizar"
 msgid ""
 "The File Link \"%s\" was added to the Topic \"%s\" of the virtual "
 "environment \"%s\" successfully!"
-msgstr ""
-"O Link para Arquivo \"%s\" foi adicionado ao tópico \"%s\" do ambiente "
+msgstr "O Link para Arquivo \"%s\" foi adicionado ao tópico \"%s\" do ambiente "
 "virtual \"%s\" com sucesso!"
 
 #: file_link/views.py:291
@@ -134,8 +133,7 @@ msgstr "O Link para Arquivo \"%s\" foi atualizado com sucesso!"
 msgid ""
 "The File Link \"%s\" was removed successfully from virtual environment \"%s"
 "\"!"
-msgstr ""
-"O Link para Arquivo \"%s\" foi removido do ambiente virtual \"%s\" com "
+msgstr "O Link para Arquivo \"%s\" foi removido do ambiente virtual \"%s\" com "
 "sucesso!"
 
 #~ msgid "Close"
