--- a/users/locale/pt_BR/LC_MESSAGES/django.po
+++ b/users/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-03-21 22:38-0300\n"
+"POT-Creation-Date: 2017-03-21 22:47-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -311,8 +311,8 @@ msgstr "Cadastrar Usuário"
 
 #: .\views.py:156
 #, python-format
-msgid "User %s updated successfully"
-msgstr "Usuário %s atualizado com sucesso"
+msgid "User \"%s\" updated successfully"
+msgstr "Usuário \"%s\" atualizado com sucesso"
 
 #: .\views.py:170
 msgid "Update User"
