--- a/amadeus/locale/pt_BR/LC_MESSAGES/django.po
+++ b/amadeus/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-03-22 17:37-0300\n"
+"POT-Creation-Date: 2017-03-23 13:53-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -87,8 +87,10 @@ msgid "Theme"
 msgstr "Temas"
 
 #: amadeus/templates/base.html:179
-msgid "Web Conference Settings"
-msgstr "Configurações da Web conferência"
+#, fuzzy
+#| msgid "Web Conference Settings"
+msgid "Web Conference"
+msgstr "Web conferência"
 
 #: amadeus/templates/base.html:199 amadeus/templates/base.html:254
 msgid "Subjects"
